--- a/src/components/UI/header/Header.module.scss
+++ b/src/components/UI/header/Header.module.scss
@@ -1,8 +1,8 @@
 .header {
-   @apply h-20 w-full;
+   @apply min-h-14 w-full;
 }
 .wrapper {
-   @apply fixed top-0 left-0 w-full h-20 z-[20];
+   @apply fixed top-0 left-0 w-full h-28 z-[20];
 }
 .content {
    @apply flex items-center justify-between h-full
@@ -10,7 +10,7 @@
 }
 
 .logo {
-   @apply font-bold text-3xl uppercase text-accent;
+   @apply relative z-[25] font-bold text-3xl uppercase text-accent;
 }
 .nav {
    @apply md:flex-grow md:flex md:justify-center;
@@ -22,15 +22,18 @@
    @apply leading-6 font-medium text-accent
    cursor-pointer;
 }
+.button {
+   @apply relative z-[25] hidden sm:block;
+}
 
 .burger {
-   @apply relative h-5 w-8 md:hidden z-[25] cursor-pointer;
+   @apply relative h-5 w-8 md:hidden z-[30] cursor-pointer;
 }
 .burger::after,
 .burger::before,
 .burger > span {
    @apply absolute content-[''] left-0 w-full h-[2px]
-   bg-black transition-all;
+   bg-accent transition-all;
 }
 .burger::before {
    @apply top-0;
@@ -54,17 +57,40 @@
 }
 
 @media (max-width: 767px) {
+   .wrapper {
+      @apply bg-main h-20;
+   }
+   .wrapper::before {
+      @apply content-[""] fixed w-full top-0
+      -left-full h-20 z-[25] transition-all bg-main;
+   }
+   .wrapper._open::before {
+      @apply left-0;
+   }
    .nav {
       @apply fixed top-0 -left-full z-[15] w-full h-full
-      transition-all;
+      transition-all bg-black/90;
    }
    .nav._open {
       @apply left-0;
    }
    .menu {
-      @apply flex-col justify-center items-center h-full w-full;
+      @apply flex-col justify-start items-center h-full w-full
+      gap-y-8 overflow-y-auto pt-52;
+   }
+   .menu-item {
+      @apply text-3xl;
    }
    .actions {
-      @apply flex items-center gap-x-4;
+      @apply flex items-center gap-x-6;
+   }
+}
+
+@media (min-width: 768px) {
+   .wrapper {
+      @apply transition-colors;
+   }
+   .wrapper._label {
+      @apply bg-main h-20;
    }
 }
