--- a/src/components/UI/button/Button.module.scss
+++ b/src/components/UI/button/Button.module.scss
@@ -1,4 +1,5 @@
 .button {
-   @apply h-12 bg-accent rounded-[30px] px-6
-   font-medium;
+   @apply md:h-12 h-10 bg-accent rounded-[30px] md:px-6 px-4
+   font-medium text-black transition-colors
+   border-2 border-accent hover:bg-transparent hover:text-accent;
 }
