--- a/src/page/main/Main.module.scss
+++ b/src/page/main/Main.module.scss
@@ -7,17 +7,17 @@
 }
 
 .info {
-   @apply basis-[55%] grow-0;
+   @apply basis-[60%] grow-0;
 }
 .title {
-   @apply lg:mb-8 mb-4;
+   @apply md:mb-8 mb-4;
 }
 .text {
-   @apply lg:mb-16 mb-8;
+   @apply md:mb-16 mb-8;
 }
 .button {
-   @apply flex items-center gap-x-4 lg:min-w-[150px] min-w-[100px]
-   lg:px-6 px-3 lg:h-14 h-12 bg-accent text-black transition-colors box-border
+   @apply flex items-center gap-x-4 md:min-w-[150px] min-w-[100px]
+   md:px-6 px-3 md:h-14 h-12 bg-accent text-black transition-colors box-border
    border-2 border-accent;
 }
 .button:hover {
@@ -28,7 +28,7 @@
    }
 }
 .button-text {
-   @apply lg:text-lg text-base font-medium transition-colors;
+   @apply md:text-lg text-base font-medium transition-colors;
 }
 .button-icon {
    @apply transition-colors;
