create actions component

--- a/src/components/UI/footer/Footer.module.scss
+++ b/src/components/UI/footer/Footer.module.scss
@@ -1,6 +1,6 @@
-/* .footer {
-   @apply md:pt-28 pt-16;
-} */
+.footer {
+   @apply md:pt-20 pt-10;
+}
 
 .info {
    @apply text-center pb-12 border-b border-accent/80;
