--- a/src/page/main/Main.module.scss
+++ b/src/page/main/Main.module.scss
@@ -34,6 +34,9 @@
    @apply transition-colors;
 }
 
+.main-bg {
+   @apply object-cover;
+}
 .overlay {
    @apply absolute top-0 left-0 w-full h-full
    z-[4] bg-black/50;
