--- a/src/page/actions/Actions.module.scss
+++ b/src/page/actions/Actions.module.scss
@@ -4,6 +4,7 @@
    column-gap: 20px;
    row-gap: 20px;
    justify-content: center;
+   justify-items: center;
 }
 .cards-item {
    @apply flex-1;
