--- a/src/page/reviews/Reviews.module.scss
+++ b/src/page/reviews/Reviews.module.scss
@@ -10,7 +10,10 @@
 }
 
 .wrapper {
-   @apply relative;
+   @apply relative max-w-[1440px] mx-auto overflow-hidden;
+}
+.content {
+   @apply w-full overflow-hidden;
 }
 .slide-item {
    @apply h-full xl:px-8 sm:px-5 px-3 xl:py-6 py-5 rounded-lg bg-gradient-to-b from-[rgba(129,106,241,0.3)]
@@ -40,5 +43,14 @@
    }
    .overlay-right {
       @apply right-0 bg-gradient-to-l w-[30%];
+   }
+}
+
+@media (min-width: 1440px) {
+   .overlay-left {
+      @apply -left-1;
+   }
+   .overlay-right {
+      @apply -right-1;
    }
 }
