--- a/src/page/reviews/Reviews.module.scss
+++ b/src/page/reviews/Reviews.module.scss
@@ -10,7 +10,7 @@
 }
 
 .wrapper {
-   @apply relative max-w-[1440px] mx-auto overflow-hidden;
+   @apply relative max-w-[1440px] mx-auto overflow-x-hidden;
 }
 .content {
    @apply w-full overflow-hidden;
