--- a/src/page/main/Main.module.scss
+++ b/src/page/main/Main.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
-   @apply relative pt-20 -mt-28 overflow-x-hidden;
+   @apply relative md:pt-20 md:-mt-28 overflow-x-hidden;
 }
 .content {
    @apply relative z-[5] md:flex md:items-start md:justify-between
-   md:py-[250px] py-[150px] gap-x-14;
+   md:py-[250px] py-24 gap-x-14;
 }
 
 .info {
@@ -39,7 +39,7 @@
 }
 .overlay {
    @apply absolute top-0 left-0 w-full h-full
-   z-[4] bg-black/50;
+   z-[4] md:bg-black/50 bg-black/30;
 }
 
 @media (max-width: 767px) {
