add keywords and alts to the images

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -30,7 +30,7 @@ h1 {
    @apply text-5xl leading-normal font-medium;
 }
 h2 {
-   @apply md:text-4xl text-2xl leading-normal font-medium;
+   @apply md:text-4xl text-2xl font-medium;
 }
 h3 {
    @apply md:text-2xl text-xl leading-8 font-medium;
