--- a/src/page/main/Main.module.scss
+++ b/src/page/main/Main.module.scss
@@ -10,10 +10,10 @@
    @apply basis-[60%] grow-0 lg:pl-16 md:pl-5;
 }
 .title {
-   @apply md:mb-8 mb-4;
+   @apply md:mb-8 mb-4 leading-normal #{!important};
 }
 .text {
-   @apply md:mb-16 mb-8;
+   @apply md:mb-16 mb-8 md:leading-8 leading-6 #{!important};
 }
 .button {
    @apply flex items-center gap-x-4 md:min-w-[150px] min-w-[100px]
